--- a/index.html
+++ b/index.html
@@ -6,11 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MU</title>
+    <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lhr3rky.css">
 </head>
 
 <body>
-
+    <main class="main--home">
+        <header>
+            <nav class="menu">
+                <ul class="menu--main">
+                    <li><a href="eventi.html">Eventi</a></li>
+                    <li><a class="menu--trigger">Progetti</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+                <ul class="menu--projects">
+                    <li><br><a href="tule.html">Tule</a></li>
+                    <li><a href="">Elementi</a></li>
+                    <li><a href="">Ascolta</a></li>
+                    <li><a href="">Marea</a></li>
+                    <li><a href="">Radio88</a></li>
+                </ul>
+            </nav>
+            <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
+        </header>
+        <footer>
+            <a class="logo" href="index.html">
+                <h1><span>M</span><img src="assets/logo-simple-mu.svg"><span>U</span></h1>
+            </a>
+            <ul>
+                <li><a href="">Facebook </a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">YouTube</a></li>
+            </ul>
+        </footer>
+    </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
