add content to about page

--- a/about.html
+++ b/about.html
@@ -34,22 +34,37 @@
                     circuitazione di pratiche e poetiche liminali; promuovendo l’ascolto come azione attiva e veicolo di
                     relazione agli spazi, agli individui e agli strumenti.</p>
             </div>
-            <div class="content--block --info">
+            <!-- <div class="content--block --info">
                 <p>Associazione Culturale MU
-                    <br>Via Giuseppe Verzaglia, 4
+                    <br>via Giuseppe Verzaglia, 4
                     <br>47521 Cesena
                 </p>
-            </div>
+            </div> -->
             <div class="content--block">
                 <h3><a href="">Sostieni MU</a></h3>
                 <p>Compila il form online
                     <br>Socio Ordinario 5€
                     <br>Socio Sostenitore 15€
                 </p>
-                <h3><a href="">Trasparenza</a></h3>
+            </div>
+            <p><a class="button--open">Trasparenza</a></p>
+            <div class="content--open --info">
+                <p>Associazione Culturale MU</p>
+                <p>via Giuseppe Verzaglia, 4
+                    <br>47521 Cesena (FC) Italia
+                </p>
+                <p>CF 90074590408
+                    <br>P.IVA 04256550403
+                </p>
+                </p>
+                <p>Dati di cui all’articolo 1, commi 125-129, L. 124/2017
+                    <br>Anno 2019
+                </p>
+                <div><img src="assets/uploads/images/trasparenza-2019.png" width="100%"></div>
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
