--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <nav class="menu">
                 <ul class="menu--main">
                     <li><a href="eventi.html">Eventi</a></li>
-                    <li><a class="menu--trigger">Progetti</a></li>
+                    <li><a class="button--open">Progetti</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
-                <ul class="menu--projects">
+                <ul class="menu--projects content--open">
                     <li><br><a href="tule.html">Tule</a></li>
                     <li><a href="">Elementi</a></li>
                     <li><a href="">Ascolta</a></li>
