get ready for review

--- a/10122021.html
+++ b/10122021.html
@@ -14,11 +14,7 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <!-- <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a> -->
             <div class="main--image"><img src="assets/uploads/images/10-12-700x478.png"></div>
-            <a class="logo" href="index.html">
-                <h1><span>M</span><img src="assets/logo-simple-mu.svg"><span>U</span></h1>
-            </a>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -63,6 +59,9 @@
                 <img src="assets/uploads/loghi/MIC.png">
             </div>
         </section>
+        <div class="nav--pages">
+            <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
+        </div>
     </main>
 </body>
 
