--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <div class="nav--pages">
+        <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
+    </div>
     <main class="main--home">
         <header>
             <nav class="menu">
@@ -28,11 +31,11 @@
                     <li><a href="">Radio88</a></li>
                 </ul>
             </nav>
-            <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
+            <!-- <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a> -->
         </header>
         <footer>
             <a class="logo" href="index.html">
-                <h1><span>M</span><img src="assets/logo-simple-mu.svg"><span>U</span></h1>
+                <h1><span>M</span><img src="assets/logo-mu.svg"><span>U</span></h1>
             </a>
             <ul>
                 <li><a href="">Facebook </a></li>
