--- a/tule.html
+++ b/tule.html
@@ -15,9 +15,6 @@
     <main class="main--pages">
         <section class="col--nav">
             <div class="main--image"><img src="assets/uploads/images/Tule2021-alta-02.jpg"></div>
-            <a class="logo" href="index.html">
-                <h1><span>M</span><img src="assets/logo-simple-mu.svg"><span>U</span></h1>
-            </a>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -35,7 +32,7 @@
                     naturale attraverso pratiche di ascolto attivo.</p>
             </div>
             <div class="content--block">
-                <a href="">
+                <a href="tule-2021.html">
                     <h2>TULE 2021</h2>
                     <h3>28-29.8.2021 + 11.9.2021</h3>
                 </a>
@@ -53,6 +50,9 @@
                 </a>
             </div>
         </section>
+        <div class="nav--pages">
+            <h3 class="menu-btn"><a href="index.html">Mu</a></h3>
+        </div>
     </main>
 </body>
 
