--- a/about.html
+++ b/about.html
@@ -14,13 +14,7 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <!-- <div class="menu-btn"><a href="index.html">Me<br>nu</a></div> -->
-            <div class="main--contact">
-                <h2><a href="mailto:info@mmmu.it">info@mmmu.it</a></h2>
-            </div>
-            <a class="logo" href="index.html">
-                <h1><span>M</span><img src="assets/logo-simple-mu.svg"><span>U</span></h1>
-            </a>
+            <div class="main--image"><img src="assets/logo-mu.svg"></div>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -34,12 +28,10 @@
                     circuitazione di pratiche e poetiche liminali; promuovendo l’ascolto come azione attiva e veicolo di
                     relazione agli spazi, agli individui e agli strumenti.</p>
             </div>
-            <!-- <div class="content--block --info">
-                <p>Associazione Culturale MU
-                    <br>via Giuseppe Verzaglia, 4
-                    <br>47521 Cesena
-                </p>
-            </div> -->
+            <div class="content--block">
+                <h3>Email</h3>
+                <p><a href="mailto:info@mmmu.it">info@mmmu.it</a></p>
+            </div>
             <div class="content--block">
                 <h3><a href="">Sostieni MU</a></h3>
                 <p>Compila il form online
@@ -47,15 +39,18 @@
                     <br>Socio Sostenitore 15€
                 </p>
             </div>
-            <p><a class="button--open">Trasparenza</a></p>
-            <div class="content--open --info">
-                <p>Associazione Culturale MU</p>
-                <p>via Giuseppe Verzaglia, 4
+            <div class="content--block --info">
+                <p>Associazione Culturale MU
+                    <br>via Giuseppe Verzaglia, 4
                     <br>47521 Cesena (FC) Italia
                 </p>
+            </div>
+            <div class="content--block">
+                <h3><a class=" button--open">Trasparenza</a></h3>
+            </div>
+            <div class="content--block content--open --info">
                 <p>CF 90074590408
                     <br>P.IVA 04256550403
-                </p>
                 </p>
                 <p>Dati di cui all’articolo 1, commi 125-129, L. 124/2017
                     <br>Anno 2019
@@ -63,6 +58,9 @@
                 <div><img src="assets/uploads/images/trasparenza-2019.png" width="100%"></div>
             </div>
         </section>
+        <div class="nav--pages">
+            <h3 class="menu-btn"><a href="index.html">Mu</a></h3>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
