--- a/eventi.html
+++ b/eventi.html
@@ -23,21 +23,22 @@
                 <li><a href="#2018">2018</a></li>
             </ul>
             <a class="logo" href="index.html">
-                <h1><span>M</span><img src="assets/logo-simple-mu.svg"><span>U</span></h1>
+                <!-- <h1><span>M</span><img src="assets/logo-mu.svg"><span>U</span></h1> -->
+                <!-- <h1><img src="assets/logo-mu.svg"></h1> -->
             </a>
         </section>
         <section class="col--content">
             <ul>
                 <li class="content--block" id="2021">
-                    <a href="10122021-lea-bertucci-francesca-naibo.html">
-                        <h2>10.12.2021</h2>
-                        <h3>Lea Bertucci | Francesca Naibo</h3>
+                    <a href="11122021.html">
+                        <h2>11.12.2021</h2>
+                        <h3>901 Editions Showcase – Giuseppe Ielasi | kNN / Renato Grieco | Luigi Turra</h3>
                     </a>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>11.12.2021</h2>
-                        <h3>901 Editions Showcase – Giuseppe Ielasi | kNN / Renato Grieco | Luigi Turra</h3>
+                    <a href="10122021.html">
+                        <h2>10.12.2021</h2>
+                        <h3>Lea Bertucci | Francesca Naibo</h3>
                     </a>
                 </li>
                 <li class="content--block">
@@ -54,7 +55,7 @@
                     </a>
                 </li>
                 <li class="content--block">
-                    <a href="">
+                    <a href="tule-2021.html">
                         <h2>28-29.8.2021 + 11.9.2021</h2>
                         <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
                     </a>
@@ -151,6 +152,11 @@
                 </li>
             </ul>
         </section>
+        <div class="nav--pages">
+            <!-- <a class="close-btn" href="index.html"><img src="assets/ui/ui-close.svg"></a> -->
+            <a class="logo-btn" href="index.html"><img src="assets/logo-mu.svg"></a>
+            <h3 class="menu-btn"><a href="index.html">Mu</a></h3>
+        </div>
     </main>
 </body>
 
