--- a/10122021-bertucci-naibo.html
+++ b/10122021-bertucci-naibo.html
@@ -14,7 +14,7 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="main--image"><img src="assets/uploads/images/10-12-700x478.png"></div>
+            <div class="content--image"><img src="assets/uploads/images/10-12-700x478.png"></div>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -26,18 +26,25 @@
             <div class="content--block">
                 <p>Ultimi due appuntamenti di MU per il 2021, realizzati in collaborazione con Metamorfosi Notturne e
                     Almare.</p>
-                <p>Lea Bertucci è una musicista sperimentale, compositrice e performer il cui lavoro è incentrato sulle
-                    relazioni tra fenomeni acustici e risonanze biologiche. Oltre alla sua pratica con strumenti a fiato
-                    il suo lavoro include diffusioni audio multicanale, tecniche di improvvisazione radicale e
-                    l’utilizzo
-                    creativo della tecnologia audio applicata alla registrazione ambientale e a tecniche di
-                    campionamento e
-                    collage sonoro. Negli ultimi anni ha realizzato progetti site-specific di investigazione acustica
-                    dell’architettura.</p>
+                <p><u>Lea Bertucci</u> è una musicista sperimentale, compositrice e performer il cui lavoro è
+                    incentrato sulle relazioni tra fenomeni acustici e risonanze biologiche. Oltre alla sua pratica con
+                    strumenti a fiato il suo lavoro include diffusioni audio multicanale, tecniche di improvvisazione
+                    radicale e l’utilizzo creativo della tecnologia audio applicata alla registrazione ambientale e a
+                    tecniche di campionamento e collage sonoro. Negli ultimi anni ha realizzato progetti site-specific
+                    di investigazione acustica dell’architettura.</p>
                 <p>Ha pubblicato 8 dischi in solo, suonato negli Stati Uniti e in tutta Europa e realizzato lavori per
-                    l’INA
-                    GRM di Parigi, Quartetto Maurice di Torino ed è stata premiata con il Jfund for New Music Grant
-                    dall’American Composers’ Forum.</p>
+                    l’INA GRM di Parigi, Quartetto Maurice di Torino ed è stata premiata con il Jfund for New Music
+                    Grant dall’American Composers’ Forum.</p>
+                <p> <u>Francesca Naibo</u>, chitarrista di Vittorio Veneto (TV) ma milanese di adozione, si muove
+                    agilmente tra tutte le varie coniugazioni della chitarra, dalla classica, all’elettrica, alla
+                    fretless fino alla pedal steel. Impegnata da anni nella ricerca della performance in solo, è
+                    concentrata nell’esplorazione dei campi dell’improvvisazione libera, della musica contemporanea e
+                    del repertorio classico, tre mondi differenti ma simili tra loro nel rapporto col suono. Il suo
+                    interesse è particolarmente focalizzato sull’uso sia della natura acustica che elettrica del suo
+                    strumento, avventurandosi tra droni ruggenti fino a microscopiche vibrazioni.</p>
+                <p>Ha studiato a Venezia, Milano, Berna e Basilea diplomandosi in chitarra classica e improvvisazione
+                    libera, e collabora con vari musicisti europei, specialmente nell’Europa Centrale e del Nord. Oltre
+                    alla sua attività artistica, è insegnante di chitarra alla scuola media a Milano.</p>
             </div>
             <div class="content--block --info">
                 <p>Eliseo Art Lab – Viale G. Carducci 11, Cesena</p>
@@ -59,8 +66,8 @@
                 <img src="assets/uploads/loghi/MIC.png">
             </div>
         </section>
-        <div class="nav--pages">
-            <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
+        <div class="nav--btn">
+            <a class="btn--close" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
         </div>
     </main>
 </body>
