--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="main--image"><img src="assets/logo-mu.svg"></div>
+            <div class="content--image"><img src="assets/logo-mu.svg"></div>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -33,22 +33,22 @@
                 <p><a href="mailto:info@mmmu.it">info@mmmu.it</a></p>
             </div>
             <div class="content--block">
-                <h3><a href="">Sostieni MU</a></h3>
-                <p>Compila il form online
-                    <br>Socio Ordinario 5€
+                <h3>Sostieni MU</h3>
+                <p><a href="">Compila il form online</a></p>
+                <p>Socio Ordinario 5€
                     <br>Socio Sostenitore 15€
                 </p>
             </div>
             <div class="content--block --info">
-                <p>Associazione Culturale MU
-                    <br>via Giuseppe Verzaglia, 4
+                <p>Associazione Culturale MU</p>
+                <p>via Giuseppe Verzaglia, 4
                     <br>47521 Cesena (FC) Italia
                 </p>
             </div>
             <div class="content--block">
-                <h3><a class=" button--open">Trasparenza</a></h3>
+                <h3><a class="btn--open" href="#trasparenza">Trasparenza</a></h3>
             </div>
-            <div class="content--block content--open --info">
+            <div class="content--block content--open --info" id="trasparenza">
                 <p>CF 90074590408
                     <br>P.IVA 04256550403
                 </p>
@@ -58,8 +58,9 @@
                 <div><img src="assets/uploads/images/trasparenza-2019.png" width="100%"></div>
             </div>
         </section>
-        <div class="nav--pages">
-            <h3 class="menu-btn"><a href="index.html">Mu</a></h3>
+        <div class="nav--btn">
+            <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
+            <h3><a href="index.html">Mu</a></h3>
         </div>
     </main>
     <script src="script.js"></script>
