--- a/11122021-901-editions-showcase.html
+++ b/11122021-901-editions-showcase.html
@@ -14,7 +14,7 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="main--image"><img src="assets/uploads/images/11-12-700x478.png"></div>
+            <div class="content--image"><img src="assets/uploads/images/11-12-700x478.png"></div>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -77,8 +77,8 @@
                 <img src="assets/uploads/loghi/MIC.png">
             </div>
         </section>
-        <div class="nav--pages">
-            <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
+        <div class="nav--btn">
+            <a class="btn--close" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
         </div>
     </main>
 </body>
