--- a/eventi.html
+++ b/eventi.html
@@ -14,150 +14,204 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <!-- <div class="menu-btn"><a href="index.html">Me<br>nu</a></div> -->
-            <ul class="main--list">
-                <li><a href="#2022">2022</a></li>
-                <li><a href="#2021">2021</a></li>
-                <li><a href="#2020">2020</a></li>
-                <li><a href="#2019">2019</a></li>
-                <li><a href="#2018">2018</a></li>
+            <ul class="content--nav">
+                <li class="nav--link">
+                    <h2><a href="#2022">2022</a></h2>
+                </li>
+                <li class="nav--link">
+                    <h2><a href="#2021">2021</a></h2>
+                </li>
+                <li class="nav--link">
+                    <h2><a href="#2020">2020</a></h2>
+                </li>
+                <li class="nav--link">
+                    <h2><a href="#2019">2019</a></h2>
+                </li>
+                <li class="nav--link">
+                    <h2><a href="#2018">2018</a></h2>
+                </li>
             </ul>
-            <a class="logo" href="index.html">
-                <!-- <h1><span>M</span><img src="assets/logo-mu.svg"><span>U</span></h1> -->
-                <!-- <h1><img src="assets/logo-mu.svg"></h1> -->
-            </a>
         </section>
         <section class="col--content">
             <ul>
                 <li class="content--block" id="2021">
-                    <a href="11122021.html">
-                        <h2>11.12.2021</h2>
-                        <h3>901 Editions Showcase – Giuseppe Ielasi | kNN / Renato Grieco | Luigi Turra</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="11122021-901-editions-showcase.html">
+                            <h2>11.12.2021</h2>
+                            <h3>901 Editions Showcase – Giuseppe Ielasi | kNN / Renato Grieco | Luigi Turra</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="10122021.html">
-                        <h2>10.12.2021</h2>
-                        <h3>Lea Bertucci | Francesca Naibo</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="10122021-bertucci-naibo.html">
+                            <h2>10.12.2021</h2>
+                            <h3>Lea Bertucci | Francesca Naibo</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>27.11.2021</h2>
-                        <h3>ALMARE – Cronache di vita di Dorothea Ïesj S.P.U. “Episodio 1 – La mattina del quinto
-                            anniversario"</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="26112021-almare.html">
+                            <h2>27.11.2021</h2>
+                            <h3>ALMARE – Cronache di vita di Dorothea Ïesj S.P.U. “Episodio 1 – La mattina del quinto
+                                anniversario"</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>26.11.2021</h2>
-                        <h3>BLUTWURST – Parva Lumina | Giovanni di Domenico</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="27112021-blutwurst.html">
+                            <h2>26.11.2021</h2>
+                            <h3>BLUTWURST – Parva Lumina | Giovanni di Domenico</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="tule-2021.html">
-                        <h2>28-29.8.2021 + 11.9.2021</h2>
-                        <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="tule-2021.html">
+                            <h2>28-29.8.2021 + 11.9.2021</h2>
+                            <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block" id="2020">
-                    <a href="">
-                        <h2>10.9.2020</h2>
-                        <h3>Giovanni di Domenico</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>10.9.2020</h2>
+                            <h3>Giovanni di Domenico</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>5.9.2020</h2>
-                        <h3>Peter Ablinger – OUTSIDE &</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>5.9.2020</h2>
+                            <h3>Peter Ablinger – OUTSIDE &</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>29-30.8.2020</h2>
-                        <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>29-30.8.2020</h2>
+                            <h3>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block" id="2019">
-                    <a href="">
-                        <h2>2.7.2019</h2>
-                        <h3>BLUTWURST esegue Ricercar nell’ombra di Emmanuel Holterbach</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>2.7.2019</h2>
+                            <h3>BLUTWURST esegue Ricercar nell’ombra di Emmanuel Holterbach</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>15.9.2019</h2>
-                        <h3>Anne Bourne | Silvia Tarozzi</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>15.9.2019</h2>
+                            <h3>Anne Bourne | Silvia Tarozzi</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>3-4.9.2019</h2>
-                        <h3>Marja Ahti</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>3-4.9.2019</h2>
+                            <h3>Marja Ahti</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>11.6.2019</h2>
-                        <h3>Seijiro Murayama | Jean-Luc Guionnet</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>11.6.2019</h2>
+                            <h3>Seijiro Murayama | Jean-Luc Guionnet</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>9.6.2019</h2>
-                        <h3>Daniela Cattivelli – UIT</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>9.6.2019</h2>
+                            <h3>Daniela Cattivelli – UIT</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>8-9.6.2019</h2>
-                        <h3>MU @ Mappe per il ritorno</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>8-9.6.2019</h2>
+                            <h3>MU @ Mappe per il ritorno</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>26.05.2019</h2>
-                        <h3>Rino Daidoji – La mattina e un po' di piccole notti</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>26.05.2019</h2>
+                            <h3>Rino Daidoji – La mattina e un po' di piccole notti</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>10.05.2019</h2>
-                        <h3>MU @ Periferico Festival</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>10.05.2019</h2>
+                            <h3>MU @ Periferico Festival</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>11.04.2019</h2>
-                        <h3>Ornette: Made in America</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>11.04.2019</h2>
+                            <h3>Ornette: Made in America</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>10.03.2019</h2>
-                        <h3>Francesco Bergamo – Il disegno del paesaggio sonoro</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>10.03.2019</h2>
+                            <h3>Francesco Bergamo – Il disegno del paesaggio sonoro</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>10.03.2019</h2>
-                        <h3>Julia Eckhardt – OCCAM IV</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>10.03.2019</h2>
+                            <h3>Julia Eckhardt – OCCAM IV</h3>
+                        </a>
+                    </div>
                 </li>
                 <li class="content--block">
-                    <a href="">
-                        <h2>22.11.2019</h2>
-                        <h3>Sarah Hennies – Falsetto</h3>
-                    </a>
+                    <div class="content--list">
+                        <a href="">
+                            <h2>22.11.2019</h2>
+                            <h3>Sarah Hennies – Falsetto</h3>
+                        </a>
+                    </div>
                 </li>
             </ul>
         </section>
-        <div class="nav--pages">
-            <!-- <a class="close-btn" href="index.html"><img src="assets/ui/ui-close.svg"></a> -->
-            <a class="logo-btn" href="index.html"><img src="assets/logo-mu.svg"></a>
-            <h3 class="menu-btn"><a href="index.html">Mu</a></h3>
+        <div class="nav--btn">
+            <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
+            <h3><a href="index.html">Mu</a></h3>
         </div>
     </main>
+    <!-- <script>
+        const btns = document.getElementsByClassName("nav--link");
+        for (let i = 0; i < btns.length; i++) {
+            btns[i].addEventListener("click", () => {
+                const current = document.getElementsByClassName("active");
+                current[0].className = current[0].className.replace(" active", "");
+                this.className += " active";
+            });
+        }
+    </script> -->
 </body>
 
 </html>
