--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
 </head>
 
 <body>
-    <div class="nav--pages">
-        <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
+    <div class="nav--btn">
+        <a class="btn--close" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
     </div>
     <main class="main--home">
         <header>
             <nav class="menu">
                 <ul class="menu--main">
                     <li><a href="eventi.html">Eventi</a></li>
-                    <li><a class="button--open">Progetti</a></li>
+                    <li><a class="btn--open">Progetti</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
                 <ul class="menu--projects content--open">
                     <li><br><a href="tule.html">Tule</a></li>
                     <li><a href="">Elementi</a></li>
+                    <li><a href="">3ECO – Cienfuegos</a></li>
                     <li><a href="">Ascolta</a></li>
                     <li><a href="">Marea</a></li>
                     <li><a href="">Radio88</a></li>
                 </ul>
             </nav>
-            <!-- <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a> -->
         </header>
         <footer>
-            <a class="logo" href="index.html">
+            <div class="logo">
                 <h1><span>M</span><img src="assets/logo-mu.svg"><span>U</span></h1>
-            </a>
+            </div>
             <ul>
-                <li><a href="">Facebook </a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">YouTube</a></li>
+                <li><a href="https://www.facebook.com/munonesiste">Facebook </a></li>
+                <li><a href="https://www.instagram.com/munonesiste/">Instagram</a></li>
+                <li><a href="https://www.youtube.com/channel/UCaIzG0dQ4hnzzTw4ivjeCdQ">YouTube</a></li>
             </ul>
         </footer>
     </main>
