--- a/tule-2021.html
+++ b/tule-2021.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <div class="nav--pages">
-        <a class="close-btn" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
+    <div class="nav--btn">
+        <a class="btn--close" href="eventi.html"><img src="assets/ui/ui-close.svg"></a>
     </div>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="main--image"><img src="assets/uploads/images/Tule2021-alta-02.jpg"></div>
+            <div class="content--image"><img src="assets/uploads/images/Tule2021-alta-02.jpg"></div>
         </section>
         <section class="col--content">
             <div class="content--block">
