--- a/tule.html
+++ b/tule.html
@@ -14,7 +14,7 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="main--image"><img src="assets/uploads/images/Tule2021-alta-02.jpg"></div>
+            <div class="content--image"><img src="assets/uploads/images/Tule2021-alta-02.jpg"></div>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -31,27 +31,44 @@
                     frequentato, stimolare una nuova abitabilità e ampliare la consapevolezza ecologica del contesto
                     naturale attraverso pratiche di ascolto attivo.</p>
             </div>
-            <div class="content--block">
-                <a href="tule-2021.html">
-                    <h2>TULE 2021</h2>
-                    <h3>28-29.8.2021 + 11.9.2021</h3>
-                </a>
-            </div>
-            <div class="content--block">
-                <a href="">
-                    <h2>TULE 2020</h2>
-                    <h3>29-30.8.2020</h3>
-                </a>
-            </div>
-            <div class="content--block">
-                <a href="">
-                    <h2>TULE 2018</h2>
-                    <h3>19-21.1.2018</h3>
-                </a>
-            </div>
+            <ul>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="tule-2021.html">
+                            <h2>TULE 2021</h2>
+                            <h3>28-29.8.2021 + 11.9.2021</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="">
+                            <h2>TULE 2020</h2>
+                            <h3>29-30.8.2020</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="">
+                            <h2>TULE 2018</h2>
+                            <h3>19-21.1.2018</h3>
+                        </a>
+                    </div>
+                </li>
+                <li class="content--block">
+                    <div class="content--list">
+                        <a href="">
+                            <h2>TULE 2016</h2>
+                            <h3>29.10.2016 + 18.12.2016</h3>
+                        </a>
+                    </div>
+                </li>
+            </ul>
         </section>
-        <div class="nav--pages">
-            <h3 class="menu-btn"><a href="index.html">Mu</a></h3>
+        <div class="nav--btn">
+            <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
+            <h3><a href="index.html">Mu</a></h3>
         </div>
     </main>
 </body>
