--- a/10122021-bertucci-naibo.html
+++ b/10122021-bertucci-naibo.html
@@ -26,7 +26,8 @@
             <div class="content--block">
                 <p>Ultimi due appuntamenti di MU per il 2021, realizzati in collaborazione con Metamorfosi Notturne e
                     Almare.</p>
-                <p><u>Lea Bertucci</u> è una musicista sperimentale, compositrice e performer il cui lavoro è
+                <p><a href="http://lea-bertucci.com/" target="_blank">Lea Bertucci</a> è una musicista sperimentale,
+                    compositrice e performer il cui lavoro è
                     incentrato sulle relazioni tra fenomeni acustici e risonanze biologiche. Oltre alla sua pratica con
                     strumenti a fiato il suo lavoro include diffusioni audio multicanale, tecniche di improvvisazione
                     radicale e l’utilizzo creativo della tecnologia audio applicata alla registrazione ambientale e a
@@ -35,7 +36,7 @@
                 <p>Ha pubblicato 8 dischi in solo, suonato negli Stati Uniti e in tutta Europa e realizzato lavori per
                     l’INA GRM di Parigi, Quartetto Maurice di Torino ed è stata premiata con il Jfund for New Music
                     Grant dall’American Composers’ Forum.</p>
-                <p> <u>Francesca Naibo</u>, chitarrista di Vittorio Veneto (TV) ma milanese di adozione, si muove
+                <p><u>Francesca Naibo</u>, chitarrista di Vittorio Veneto (TV) ma milanese di adozione, si muove
                     agilmente tra tutte le varie coniugazioni della chitarra, dalla classica, all’elettrica, alla
                     fretless fino alla pedal steel. Impegnata da anni nella ricerca della performance in solo, è
                     concentrata nell’esplorazione dei campi dell’improvvisazione libera, della musica contemporanea e
