--- a/11122021-901-editions-showcase.html
+++ b/11122021-901-editions-showcase.html
@@ -26,15 +26,18 @@
             <div class="content--block">
                 <p>Ultimi due appuntamenti di MU per il 2021, realizzati in collaborazione con Metamorfosi Notturne e
                     Almare.</p>
-                <p>901 Editions, una delle più interessanti realtà discografiche del panorama nazionale, presenta dal
-                    vivo il lavoro di tre artisti il cui lavoro è stato pubblicato nel 2021.</p>
-                <p>Nato e cresciuto nel sud Italia, Giuseppe Ielasi ha iniziato a fare musica e tour dalla fine degli
+                <p><a href="http://901editions.com/" target="_blank">901 Editions</a>, una delle più interessanti realtà
+                    discografiche del panorama nazionale, presenta dal vivo il lavoro di tre artisti il cui lavoro è
+                    stato pubblicato nel 2021.</p>
+                <p>Nato e cresciuto nel sud Italia, <a href="http://www.senufoeditions.com/" target="_blank">Giuseppe
+                        Ielasi</a> ha iniziato a fare musica e tour dalla fine degli
                     anni Novanta, da solo e nei progetti Bellows (con Nicola Ratti), Oreledigneur (con Renato Rinaldi),
                     e in duo con Enrico Malatesta, Kassel Jaeger e Andrew Pekler. Collabora stabilmente anche con il
                     fotografo e film-maker Armin Linke. Al momento si dedica principalmente all’attività di studio e ha
                     inciso dischi per 12k, Senufo, Entr’Acte, Dekorder, Holidays. Lavora e vive con la moglie e i figli
                     nella periferia milanese.</p>
-                <p>Renato Grieco è un compositore attivo maggiormente nel campo della musique concrète e della
+                <p><a href="https://rongrieco.tumblr.com/" target="_blank">Renato Grieco</a> è un compositore attivo
+                    maggiormente nel campo della musique concrète e della
                     radio-arte. Dal 2013 si è esibito in Italia, Regno Unito, Francia, Svizzera, Russia, Germania,
                     Norvegia, Danimarca, Polonia, Slovenia, Turchia, Malta, Grecia sia con il suo progetto solista (con
                     lo pseudonimo kNN) che in numerose collaborazioni in veste di performer, interprete o drammaturgo
@@ -44,9 +47,9 @@
                     tra tempo reale e acusmatica, la mania retorica del compositore napoletano assume questa volta una
                     forma cameristica, tra lettere d’amore immaginate, cori in supermotion e cimeli dimenticati in una
                     camera dell’ubiquità.</p>
-                <p>Luigi Turra è un compositore elettroacustico e sound artist. Il suo interesse principale è la ricerca
-                    dell’equilibrio acustico tra silenzio, percezione tattile del suono ed esplorazione basata sulla
-                    musica aleatoria.
+                <p><u>Luigi Turra</u> è un compositore elettroacustico e sound artist. Il suo interesse principale è la
+                    ricerca dell’equilibrio acustico tra silenzio, percezione tattile del suono ed esplorazione basata
+                    sulla musica aleatoria.
                     Attraverso la manipolazione di fonti concrete ed acustiche Turra sviluppa percorsi sonori in cui gli
                     ascoltatori possano focalizzarsi su pause improvvise, tensioni sonore abrasive e momenti di stasi
                     riferendosi costantemente alla bellezza dell’imperfezione.
