--- a/tule.html
+++ b/tule.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MU</title>
+    <title>MU | TULE</title>
+
+    <meta name="description"
+        content="Tule coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
+    <link rel="canonical" href="https://www.mmmu.it/">
+    <meta name="keywords" content="ascolto attivo, fiume, soundwalk, soundwork">
+    <meta name="author" content="Giulia Polenta">
+
+    <meta property="og:locale" content="it_IT">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MU">
+    <meta property="og:description"
+        content="Tule coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
+    <meta property="og:url" content="https://www.mmmu.it/">
+    <meta property="og:site_name" content="MU">
+    <meta property="og:image" content="assets/uploads/images/tule.jpeg">
+    <meta property="og:image:alt"
+        content="La scritta Tule è ripetuta due volte, specchiata, e lo sfondo verde contiene il logo di MU, con la forma di una mandorla">
+    <meta property="og:image:secure_url" content="assets/uploads/images/tule.jpeg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:description"
+        content="Tule coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
+    <meta name="twitter:title"
+        content="Tule coinvolge il pubblico in pratiche di ascolto attivo, soundwork, soundwalk e workshop nell'area fluviale della città di Cesena.">
+    <meta name="twitter:image" content="assets/uploads/images/tule.jpeg">
+    <meta name="twitter:image:alt"
+        content="La scritta Tule è ripetuta due volte, specchiata, e lo sfondo verde contiene il logo di MU, con la forma di una mandorla">
+
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+    <link href="assets/favicon/mu-favicon-32.png" rel="shortcut icon" type="image/x-icon">
+    <link href="assets/favicon/mu-favicon-74.png" rel="apple-touch-icon">
+
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/lhr3rky.css">
