--- a/11122021-901-editions-showcase.html
+++ b/11122021-901-editions-showcase.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MU</title>
+
+    <meta name="description"
+        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+    <link rel="canonical" href="https://www.mmmu.it/">
+    <meta name="keywords" content="mu, suono, pratiche spaziali, musica">
+    <meta name="author" content="Giulia Polenta">
+
+    <meta property="og:locale" content="it_IT">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MU">
+    <meta property="og:description"
+        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+    <meta property="og:url" content="https://www.mmmu.it/">
+    <meta property="og:site_name" content="MU">
+    <meta property="og:image" content="assets/logo-mu.svg">
+    <meta property="og:image:alt"
+        content="Il logo di MU ha la forma di una mandorla stilizzata con il bordo nero e lo sfondo bianco">
+    <meta property="og:image:secure_url" content="assets/logo-mu.svg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:description"
+        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+    <meta name="twitter:title"
+        content="MU è un’organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali">
+    <meta name="twitter:image" content="assets/logo-mu.svg">
+    <meta name="twitter:image:alt"
+        content="Il logo di MU ha la forma di una mandorla stilizzata con il bordo nero e lo sfondo bianco">
+
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+    <link href="assets/favicon/mu-favicon-32.png" rel="shortcut icon" type="image/x-icon">
+    <link href="assets/favicon/mu-favicon-74.png" rel="apple-touch-icon">
+
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/lhr3rky.css">
