content test: organize eventi page

--- a/27112021-almare.html
+++ b/27112021-almare.html
@@ -46,7 +46,10 @@
 <body>
     <main class="main--pages">
         <section class="col--nav">
-            <div class="content--image"><img src="assets/uploads/images/27-11-700x478.png"></div>
+            <div class="content--image">
+                <img src="assets/uploads/images/27-11-700x478.png">
+                <img src="assets/uploads/images/27-11-700x478.png">
+            </div>
         </section>
         <section class="col--content">
             <div class="content--block">
@@ -62,8 +65,8 @@
                     spunto dall’archeologia sonora e in particolare dalle teorie dell’archeoacustica, l’opera descrive
                     un futuro immaginario in cui il suono può essere estratto dagli oggetti e dalla materia. L’audio
                     romanzo indaga il legame tra capitalismo dei dati, tecnologia e creazione di valore.</p>
-                <p>Cronache fa parte del progetto multidisciplinare in corso All signs Point To Rome, Diane incentrato
-                    sull’auto-registrazione, l’auto-monitoraggio e l’audio mediumismo.</p>
+                <p>Cronache fa parte del progetto multidisciplinare in corso <em>All signs Point To Rome, Diane</em>
+                    incentrato sull’auto-registrazione, l’auto-monitoraggio e l’audio mediumismo.</p>
                 <p>ALMARE è un collettivo la cui ricerca si dedica ai linguaggi che utilizzano il suono come mezzo
                     espressivo, alle diverse declinazioni della nozione di ascolto e le loro potenzialità come strumenti
                     di lettura delle dinamiche sociali. ALMARE lavora a cavallo tra pratiche artistiche e curatoriali,
