--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                 </p>
             </div>
             <div class="content--block">
-                <h3><a class="btn--open" href="#trasparenza">Trasparenza</a></h3>
+                <p><a class="btn--open" href="#trasparenza">Trasparenza</a></p>
             </div>
             <div class="content--block content--open --info" id="trasparenza">
                 <p>CF 90074590408
