--- a/tule.html
+++ b/tule.html
@@ -50,8 +50,8 @@
         </section>
         <section class="col--content">
             <div class="content--block">
-                <h2>TULE</h2>
-                <h3>Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3>
+                <h2>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h2>
+                <!-- <h3>Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h3> -->
             </div>
             <div class="content--block">
                 <p>TULE è una rassegna culturale che, attraverso sessioni di ascolto, soundwalk, e workshop, intende
@@ -63,40 +63,20 @@
                     frequentato, stimolare una nuova abitabilità e ampliare la consapevolezza ecologica del contesto
                     naturale attraverso pratiche di ascolto attivo.</p>
             </div>
-            <ul>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="tule-2021.html">
-                            <h2>TULE 2021</h2>
-                            <h3>28-29.8.2021 + 11.9.2021</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
-                            <h2>TULE 2020</h2>
-                            <h3>29-30.8.2020</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
-                            <h2>TULE 2018</h2>
-                            <h3>19-21.1.2018</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
-                            <h2>TULE 2016</h2>
-                            <h3>29.10.2016 + 18.12.2016</h3>
-                        </a>
-                    </div>
-                </li>
-            </ul>
+            <div class="content--block">
+                <div class="nav--link">
+                    <h2><a href="tule-2021.html">Tule 2021</a></h2>
+                </div>
+                <div class="nav--link">
+                    <h2><a href="">Tule 2020</a></h2>
+                </div>
+                <div class="nav--link">
+                    <h2><a href="">Tule 2018</a></h2>
+                </div>
+                <div class="nav--link">
+                    <h2><a href="">Tule 2016</a></h2>
+                </div>
+            </div>
         </section>
         <div class="nav--btn">
             <a class="btn--logo" href="index.html"><img src="assets/logo-mu.svg"></a>
