--- a/index.html
+++ b/index.html
@@ -58,13 +58,8 @@
                 <ul class="menu--projects content--open">
                     <li><br><a href="tule.html">Tule</a></li>
                     <li><a href="">Elementi</a></li>
-                    <!-- <li><a href="">The Listener</a></li>
-                    <li><a href="">Mappe per il ritorno</a></li>
-                    <li><a href="">Marea</a></li> -->
                     <li><a href="">3ECO – Cienfuegos</a></li>
-                    <!-- <li><a href="">Ascolta</a></li>
-                    <li><a href="">Marea</a></li>
-                    <li><a href="">Radio88</a></li> -->
+                    <!-- <li><a href="">Ascolta</a></li> -->
                 </ul>
             </nav>
         </header>
